fix: fixed wrong height in markdown parsing

--- a/frontend/src/styles/components/Layout.module.scss
+++ b/frontend/src/styles/components/Layout.module.scss
@@ -1,7 +1,6 @@
 @import '../variables.scss';
 
 .layout {
-  height: 100vh;
   display: flex;
   background-color: var(--white-2);
   @include mq(md) {
