--- a/frontend/src/styles/pages/Artist.module.scss
+++ b/frontend/src/styles/pages/Artist.module.scss
@@ -1,5 +1,4 @@
 .header {
-  height: 200px;
   width: 100%;
   p {
     font-size: 48px;
@@ -7,7 +6,7 @@
     margin: 30px 0 0 30px;
   }
   article {
-    height: 200px;
+    padding: 0 25px;
     width: 100%;
   }
 }
