--- a/frontend/src/styles/pages/Language.module.scss
+++ b/frontend/src/styles/pages/Language.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  height: 100%;
+  height: 100vh;
   div {
     vertical-align: middle;
     cursor: pointer;
